--- a/index.html
+++ b/index.html
@@ -4,8 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     
+    <header class="header">
+        <a href="#home" class="logo">
+            Cassidy <span>Peterson</span>
+        </a>
+
+        <i class='bx bx-menu' id="menu-icon"></i>
+
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hi</h3>
+            <h1>It's <span>Cassidy</span></h1>
+            <h3 class="text-animation">
+                I'm a <span></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum assumenda cupiditate dolore repellendus fugit exercitationem necessitatibus natus fugiat, fuga et quisquam nisi expedita enim consequatur ea est a ipsam qui.</p>
+            </h3>
+
+            <div class="social-icons">
+                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
+            </div>
+
+            <a href="#" class="btn">Download CV</a>
+
+            <div class="home-img">
+                <img src="assets/portfolioHeadshot-7-4-23-edited.png" alt="">
+            </div>
+
+        </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
