styling and adding sections

--- a/index.html
+++ b/index.html
@@ -50,6 +50,70 @@
 
         </div>
     </section>
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="#">
+        </div>
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3 class="text-animation">
+                <span></span>
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus illum quibusdam harum officia, veritatis aliquam vel necessitatibus, cumque consequuntur ipsa explicabo deserunt, ducimus quas repellat. Dolor doloremque vitae provident quos.
+            </p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
+
+    <section class="services" id="services">
+        <h2 class="heading">Services</h2>
+        <div class="service-container">
+            <div class="services-box">
+                <i class='bx bx-code-block' ></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxs-pencil' ></i>
+                <h3>Web Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxs-camera' ></i>
+                <h3>Photography</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxl-blogger' ></i>
+                <h3>Blogging</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxl-youtube' ></i>
+                <h3>Content Creation</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxs-palette' ></i>
+                <h3>Graphic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+
+
+
 
     <script src="script.js"></script>
 </body>
