--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hi</h3>
-            <h1>It's <span>Cassidy</span></h1>
+            <h3>Hey!</h3>
+            <h1>I'm <span>Cassidy</span></h1>
             <h3 class="text-animation">
                 I'm a <span></span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum assumenda cupiditate dolore repellendus fugit exercitationem necessitatibus natus fugiat, fuga et quisquam nisi expedita enim consequatur ea est a ipsam qui.</p>
@@ -111,10 +111,154 @@
             </div>
         </div>
     </section>
+    <section class="projects" id="projects">
+        <h2 class="heading">Projects</h2>
 
+        <div class="projects-container">
+            <div class="projects-box">
+                <img src="#" alt="">
+                <div class="projects-info">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
+                    <a href=""><i class="bx bx-link"></i></a>
+                </div>
+            </div>
 
+            <div class="projects-box">
+                <img src="#" alt="">
+                <div class="projects-info">
+                    <h4>Photography</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
+                    <a href=""><i class="bx bx-link"></i></a>
+                </div>
+            </div>
+            <div class="projects-box">
+                <img src="#" alt="">
+                <div class="projects-info">
+                    <h4>Graphic Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
+                    <a href=""><i class="bx bx-link"></i></a>
+                </div>
+            </div>
+            <div class="projects-box">
+                <img src="#" alt="">
+                <div class="projects-info">
+                    <h4>Frontend Development</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
+                    <a href=""><i class="bx bx-link"></i></a>
+                </div>
+            </div>
+            <div class="projects-box">
+                <img src="#" alt="">
+                <div class="projects-info">
+                    <h4>Content Creator</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
+                    <a href=""><i class="bx bx-link"></i></a>
+                </div>
+            </div>
+            <div class="projects-box">
+                <img src="#" alt="">
+                <div class="projects-info">
+                    <h4>Marketing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
+                    <a href=""><i class="bx bx-link"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="skills" id="skills">
+        <h2 class="heading">Skills</h2>
+        <div class="skill-bars">
+            <div class="bar">
+                <div class="info">
+                    <span>HTML</span>
+                    <div class="progress-line html">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <span>CSS</span>
+                    <div class="progress-line css">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <span>Javascript</span>
+                    <div class="progress-line javascript">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <span>React</span>
+                    <div class="progress-line react">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+            <div class="bar">
+                <div class="info">
+                    <span>MongoDB</span>
+                    <div class="progress-line mongodb">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact<span>Me</span></h2>
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email">
+            </div>
+            <div class="input-box">
+                <input type="tel" placeholder="Phone Number">
+                <input type="text" placeholder="Subject">
+            </div>
 
-    <script src="script.js"></script>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your message here..."></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+    </section>
+
+    <footer class="footer">
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
+        </div>
+
+        <ul class="list">
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+            <li>
+                <a href="#">Services</a>
+            </li>
+            <li>
+                <a href="#">About Me</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">Privacy Policy</a>
+            </li>
+        </ul>
+        <p class="copyright">
+            Cassidy Peterson | Site Copied
+        </p>
+    </footer>
+
+    <script src="./script.js"></script>
 </body>
 </html>
