home content paragraph text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>I'm <span>Cassidy</span></h1>
             <h3 class="text-animation">
                 I'm a <span></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum assumenda cupiditate dolore repellendus fugit exercitationem necessitatibus natus fugiat, fuga et quisquam nisi expedita enim consequatur ea est a ipsam qui.</p>
+                <p>I'm passionate about building things and solving problems using code!</p>
             </h3>
 
             <div class="social-icons">
