updated the about me text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h3 class="text-animation">
                 <span></span>
             </h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus illum quibusdam harum officia, veritatis aliquam vel necessitatibus, cumque consequuntur ipsa explicabo deserunt, ducimus quas repellat. Dolor doloremque vitae provident quos.
+            <p>Need a developer? Let's get connect and create something great together!
             </p>
             <a href="#" class="btn">Read More</a>
         </div>
