--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="#" class="btn">Download Resume</a>
 
             <div class="home-img">
-                <img src="assets/portfolioHeadshot-7-4-23-edited.png" alt="">
+                <!-- <img src="assets/portfolioHeadshot-7-4-23-edited.png" alt=""> -->
             </div>
 
         </div>
@@ -71,42 +71,42 @@
             <div class="services-box">
                 <i class='bx bx-code-block' ></i>
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <p>Need a website? I can help you get your business or project going online!</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-video'></i>
+                <h3>Video Editing</h3>
+                <p>Do you need someone to help you create and edit your videos? I offer hourly rates or project agreements depending on your needs.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Game Development</h3>
+                <p>Need a game developer to help bring your ideas to life? I have built games with Godot, Unity and Javascript.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
-                <i class='bx bxs-pencil' ></i>
-                <h3>Web Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <i class='bx bxs-vector'></i>
+                <h3>3D Modeling</h3>
+                <p>Need some new 3D assets for your projects or games? I can create concept art, models for games or animations.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
-                <i class='bx bxs-camera' ></i>
-                <h3>Photography</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxl-blogger' ></i>
-                <h3>Blogging</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxl-youtube' ></i>
-                <h3>Content Creation</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <i class='bx bx-headphone'></i>
+                <h3>Audio Services</h3>
+                <p>Sound design, mixing and mastering.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bxs-palette' ></i>
                 <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora impedit sed ex tempore omnis!</p>
+                <p>Thumnbails, desktop wall papers, icons, concept art and more.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
         </div>
@@ -167,7 +167,34 @@
         </div>
     </section>
     <section class="skills" id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Technologies</h2>
+        <div class="technologies-container">
+            <div class="tech-box">
+                <i class='bx bxl-javascript' ></i>
+            </div>
+            <div class="tech-box">
+                <i class='bx bxl-unity'></i>
+            </div>
+            <div class="tech-box">
+                <i class='bx bxl-html5'></i>
+            </div>
+            <div class="tech-box">
+                <i class='bx bxl-tailwind-css' ></i>
+            </div>
+            <div class="tech-box">
+                <i class='bx bxl-git'></i>
+            </div>
+            <div class="tech-box">
+                <i class='bx bxl-blender'></i>
+            </div>
+            <div class="tech-box">
+                <i class='bx bxl-css3' ></i>
+            </div>
+
+
+
+        </div>
+        <!-- <h2 class="heading">Skills</h2>
         <div class="skill-bars">
             <div class="bar">
                 <div class="info">
@@ -209,7 +236,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <section class="contact" id="contact">
