updates to styling and project links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
             </div>
 
-            <a href="#" class="btn">Download Resume</a>
+            <a href="#about" class="btn">Let's connect</a>
 
             <div class="home-img">
                 <!-- <img src="assets/portfolioHeadshot-7-4-23-edited.png" alt=""> -->
@@ -61,7 +61,8 @@
             </h3>
             <p>Need a developer? Let's get connect and create something great together!
             </p>
-            <a href="#" class="btn">Read More</a>
+            <a href="#services" class="btn">Services</a>
+            <a href="#projects" class="btn">Projects</a>
         </div>
     </section>
 
@@ -116,18 +117,33 @@
 
         <div class="projects-container">
             <div class="projects-box">
-                <img src="#" alt="">
-                <div class="projects-info">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
-                    <a href=""><i class="bx bx-link"></i></a>
-                </div>
+                <a href="https://io-chat-room.onrender.com/" target="_blank">
+                    <img src="/assets/io-chat-app-project-image-4-27-24.png" alt="">
+                    <div class="projects-info">
+                        <h4>ioChatroom</h4>
+                        <p>A basic multi-user chatroom that allows visitors to create or join specifically named rooms and chat in real time.
+                            Project was built using html, css, javascript with a focus on the io library for multi-user support. <br>This project was taught in a tutorial on YouTube by Dave Gray. <br>
+                            Note: This project is hosted with renders free service which spins down servers during inactivity. For this reason it may take significantly longer to load than normal.
+                        </p>
+                        <!-- <a href="https://io-chat-room.onrender.com/" target="_blank"><i class="bx bx-link"></i></a> -->
+                    </div>
+                </a>
             </div>
 
             <div class="projects-box">
+                <a href="https://cyborganiccorp.itch.io/fancy-a-run" target="_blank">
+                    <img src="/assets/fancyARunScreenShot.jpg" alt="A pixel character runs along a platform with variously colored coins scattered around.">
+                    <div class="projects-info">
+                        <h4>Fancy A Run</h4>
+                        <p>An endless runner game playable on desktop web browsers. Developed using Unity and WebGL. Hosted on itch.io.</p>
+                    </div>
+                </a>
+                
+            </div>
+            <!-- <div class="projects-box">
                 <img src="#" alt="">
                 <div class="projects-info">
-                    <h4>Photography</h4>
+                    <h4>Project 3</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
                     <a href=""><i class="bx bx-link"></i></a>
                 </div>
@@ -135,7 +151,7 @@
             <div class="projects-box">
                 <img src="#" alt="">
                 <div class="projects-info">
-                    <h4>Graphic Design</h4>
+                    <h4>Project 4</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
                     <a href=""><i class="bx bx-link"></i></a>
                 </div>
@@ -143,7 +159,7 @@
             <div class="projects-box">
                 <img src="#" alt="">
                 <div class="projects-info">
-                    <h4>Frontend Development</h4>
+                    <h4>Project 5</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
                     <a href=""><i class="bx bx-link"></i></a>
                 </div>
@@ -151,19 +167,11 @@
             <div class="projects-box">
                 <img src="#" alt="">
                 <div class="projects-info">
-                    <h4>Content Creator</h4>
+                    <h4>Project 6</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
                     <a href=""><i class="bx bx-link"></i></a>
                 </div>
-            </div>
-            <div class="projects-box">
-                <img src="#" alt="">
-                <div class="projects-info">
-                    <h4>Marketing</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
-                    <a href=""><i class="bx bx-link"></i></a>
-                </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <section class="skills" id="skills">
