--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
+            <!-- <a href="#contact">Contact</a> -->
         </nav>
     </header>
 
@@ -52,14 +52,14 @@
     </section>
     <section class="about" id="about">
         <div class="about-img">
-            <img src="#">
+            <img src="./assets/portfolioHeadshot-7-4-23-edited.png">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3 class="text-animation">
                 <span></span>
             </h3>
-            <p>Need a developer? Let's get connect and create something great together!
+            <p>Need a developer? Let's connect and create something great together!
             </p>
             <a href="#services" class="btn">Services</a>
             <a href="#projects" class="btn">Projects</a>
@@ -198,9 +198,6 @@
             <div class="tech-box">
                 <i class='bx bxl-css3' ></i>
             </div>
-
-
-
         </div>
         <!-- <h2 class="heading">Skills</h2>
         <div class="skill-bars">
@@ -247,7 +244,7 @@
         </div> -->
     </section>
 
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
         <h2 class="heading">Contact<span>Me</span></h2>
         <form action="#">
             <div class="input-box">
@@ -262,7 +259,7 @@
             <textarea name="" id="" cols="30" rows="10" placeholder="Your message here..."></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="social">
@@ -274,24 +271,24 @@
 
         <ul class="list">
             <li>
-                <a href="#">FAQ</a>
+                <a href="#">Home</a>
             </li>
             <li>
-                <a href="#">Services</a>
+                <a href="#services">Services</a>
             </li>
             <li>
-                <a href="#">About Me</a>
+                <a href="#about">About Me</a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="#">Contact</a>
-            </li>
-            <li>
+            </li> -->
+            <!-- <li>
                 <a href="#">Privacy Policy</a>
-            </li>
+            </li> -->
         </ul>
-        <p class="copyright">
+        <!-- <p class="copyright">
             Cassidy Peterson | Site Copied
-        </p>
+        </p> -->
     </footer>
 
     <script src="./script.js"></script>
