fixed technologies section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
-            <!-- <a href="#contact">Contact</a> -->
         </nav>
     </header>
 
@@ -44,16 +43,16 @@
 
             <a href="#about" class="btn">Let's connect</a>
 
-            <div class="home-img">
-                <!-- <img src="assets/portfolioHeadshot-7-4-23-edited.png" alt=""> -->
-            </div>
+            <!-- <div class="home-img">
+                <img src="assets/portfolioHeadshot-7-4-23-edited.png" alt="">
+            </div> -->
 
         </div>
     </section>
     <section class="about" id="about">
-        <div class="about-img">
+        <!-- <div class="about-img">
             <img src="./assets/portfolioHeadshot-7-4-23-edited.png">
-        </div>
+        </div> -->
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3 class="text-animation">
@@ -125,11 +124,9 @@
                             Project was built using html, css, javascript with a focus on the io library for multi-user support. <br>This project was taught in a tutorial on YouTube by Dave Gray. <br>
                             Note: This project is hosted with renders free service which spins down servers during inactivity. For this reason it may take significantly longer to load than normal.
                         </p>
-                        <!-- <a href="https://io-chat-room.onrender.com/" target="_blank"><i class="bx bx-link"></i></a> -->
                     </div>
                 </a>
             </div>
-
             <div class="projects-box">
                 <a href="https://cyborganiccorp.itch.io/fancy-a-run" target="_blank">
                     <img src="/assets/fancyARunScreenShot.jpg" alt="A pixel character runs along a platform with variously colored coins scattered around.">
@@ -138,40 +135,7 @@
                         <p>An endless runner game playable on desktop web browsers. Developed using Unity and WebGL. Hosted on itch.io.</p>
                     </div>
                 </a>
-                
             </div>
-            <!-- <div class="projects-box">
-                <img src="#" alt="">
-                <div class="projects-info">
-                    <h4>Project 3</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
-                    <a href=""><i class="bx bx-link"></i></a>
-                </div>
-            </div>
-            <div class="projects-box">
-                <img src="#" alt="">
-                <div class="projects-info">
-                    <h4>Project 4</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
-                    <a href=""><i class="bx bx-link"></i></a>
-                </div>
-            </div>
-            <div class="projects-box">
-                <img src="#" alt="">
-                <div class="projects-info">
-                    <h4>Project 5</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
-                    <a href=""><i class="bx bx-link"></i></a>
-                </div>
-            </div>
-            <div class="projects-box">
-                <img src="#" alt="">
-                <div class="projects-info">
-                    <h4>Project 6</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, hic quam. Deserunt molestias repellendus fuga.</p>
-                    <a href=""><i class="bx bx-link"></i></a>
-                </div>
-            </div> -->
         </div>
     </section>
     <section class="skills" id="skills">
@@ -199,67 +163,7 @@
                 <i class='bx bxl-css3' ></i>
             </div>
         </div>
-        <!-- <h2 class="heading">Skills</h2>
-        <div class="skill-bars">
-            <div class="bar">
-                <div class="info">
-                    <span>HTML</span>
-                    <div class="progress-line html">
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>CSS</span>
-                    <div class="progress-line css">
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>Javascript</span>
-                    <div class="progress-line javascript">
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>React</span>
-                    <div class="progress-line react">
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="bar">
-                <div class="info">
-                    <span>MongoDB</span>
-                    <div class="progress-line mongodb">
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </section>
-
-    <!-- <section class="contact" id="contact">
-        <h2 class="heading">Contact<span>Me</span></h2>
-        <form action="#">
-            <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email">
-            </div>
-            <div class="input-box">
-                <input type="tel" placeholder="Phone Number">
-                <input type="text" placeholder="Subject">
-            </div>
-
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your message here..."></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
-    </section> -->
 
     <footer class="footer">
         <div class="social">
@@ -279,16 +183,7 @@
             <li>
                 <a href="#about">About Me</a>
             </li>
-            <!-- <li>
-                <a href="#">Contact</a>
-            </li> -->
-            <!-- <li>
-                <a href="#">Privacy Policy</a>
-            </li> -->
         </ul>
-        <!-- <p class="copyright">
-            Cassidy Peterson | Site Copied
-        </p> -->
     </footer>
 
     <script src="./script.js"></script>
