--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </h3>
 
             <div class="social-icons">
-                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="https://www.linkedin.com/in/cassidy-peterson-0a242425a/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a>
                 <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
                 <a href="#"><i class='bx bxl-twitter' ></i></a>
                 <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
@@ -167,7 +167,7 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+            <a href="https://www.linkedin.com/in/cassidy-peterson-0a242425a/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a>
             <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
             <a href="#"><i class='bx bxl-twitter' ></i></a>
             <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
