added ml car project element

--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@
                     </div>
                 </a>
             </div>
+            <div class="projects-box">
+                <a href="#" target="_blank">
+                    <img src="assets/machine-learning-car-project-image-12-1-24.png" alt="A series of different cars attempt paths through traffic.">
+                    <div class="projects-info">
+                        <h4>Self Driving Car</h4>
+                        <p>A machine learning project in which a car learns to drive itself through repeating attempts at creating 
+                            a path through traffic then adjusting based on the input information its neural network recieved.
+                        </p>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <section class="skills" id="skills">
