added the contact form and arranged layout some more

--- a/index.html
+++ b/index.html
@@ -38,18 +38,11 @@
                 <a href="https://www.linkedin.com/in/cassidy-peterson-0a242425a/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a>
             </div>
 
-            <a href="#about" class="btn">Let's connect</a>
-
-            <!-- <div class="home-img">
-                <img src="assets/portfolioHeadshot-7-4-23-edited.png" alt="">
-            </div> -->
+            <a href="https://forms.gle/SY8jgqRSJ6J5yVmq8" target="_blank" class="btn">Let's connect</a>
 
         </div>
     </section>
     <section class="about" id="about">
-        <!-- <div class="about-img">
-            <img src="./assets/portfolioHeadshot-7-4-23-edited.png">
-        </div> -->
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3 class="text-animation">
@@ -69,44 +62,45 @@
                 <i class='bx bx-code-block' ></i>
                 <h3>Web Development</h3>
                 <p>Need a website? I can help you get your business or project going online!</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bx-video'></i>
-                <h3>Video Editing</h3>
-                <p>Do you need someone to help you create and edit your videos? I offer hourly rates or project agreements depending on your needs.</p>
-                <a href="#" class="btn">Learn More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bx-code-alt'></i>
-                <h3>Game Development</h3>
-                <p>Need a game developer to help bring your ideas to life? I have built games with Godot, Unity and Javascript.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxs-vector'></i>
-                <h3>3D Modeling</h3>
-                <p>Need some new 3D assets for your projects or games? I can create concept art, models for games or animations.</p>
-                <a href="#" class="btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bx-headphone'></i>
-                <h3>Audio Services</h3>
-                <p>Sound design, mixing and mastering.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="https://forms.gle/SY8jgqRSJ6J5yVmq8" target="_blank" class="btn">Learn More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bxs-palette' ></i>
                 <h3>Graphic Design</h3>
                 <p>Thumnbails, desktop wall papers, icons, concept art and more.</p>
-                <a href="#" class="btn">Read More</a>
+                <a href="https://forms.gle/SY8jgqRSJ6J5yVmq8" target="_blank" class="btn">Learn More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-video'></i>
+                <h3>Video Editing</h3>
+                <p>Do you need someone to help you create and edit your videos? I offer hourly rates or project agreements depending on your needs.</p>
+                <a href="https://forms.gle/SY8jgqRSJ6J5yVmq8" target="_blank" class="btn">Learn More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-headphone'></i>
+                <h3>Audio Services</h3>
+                <p>Sound design, mixing and mastering.</p>
+                <a href="https://forms.gle/SY8jgqRSJ6J5yVmq8" target="_blank" class="btn">Learn More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Game Development</h3>
+                <p>Need a game developer to help bring your ideas to life? I have built games with Godot, Unity and Javascript.</p>
+                <a href="https://forms.gle/SY8jgqRSJ6J5yVmq8" target="_blank" class="btn">Learn More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bxs-vector'></i>
+                <h3>3D Modeling</h3>
+                <p>Need some new 3D assets for your projects or games? I can create concept art, models for games or animations.</p>
+                <a href="https://forms.gle/SY8jgqRSJ6J5yVmq8" target="_blank" class="btn">Learn More</a>
             </div>
         </div>
+
     </section>
     <section class="projects" id="projects">
         <h2 class="heading">Projects</h2>
@@ -125,16 +119,7 @@
                 </a>
             </div>
             <div class="projects-box">
-                <a href="https://cyborganiccorp.itch.io/fancy-a-run" target="_blank">
-                    <img src="assets/fancy-a-run-project-image-6-24-24.jpg" alt="A pixel character runs along a platform with variously colored coins scattered around.">
-                    <div class="projects-info">
-                        <h4>Fancy A Run</h4>
-                        <p>An endless runner game playable on desktop web browsers. Developed using Unity WebGL. Hosted on itch.io.</p>
-                    </div>
-                </a>
-            </div>
-            <div class="projects-box">
-                <a href="#" target="_blank">
+                <a>
                     <img src="assets/machine-learning-car-project-image-12-1-24.png" alt="A series of different cars attempt paths through traffic.">
                     <div class="projects-info">
                         <h4>Self Driving Car</h4>
@@ -142,6 +127,15 @@
                             a path through traffic then adjusting based on the input information its neural network recieved. This project was taught 
                             by Radu Mariescu-Istodor from University of Eastern Finland.
                         </p>
+                    </div>
+                </a>
+            </div>
+            <div class="projects-box">
+                <a href="https://cyborganiccorp.itch.io/fancy-a-run" target="_blank">
+                    <img src="assets/fancy-a-run-project-image-6-24-24.jpg" alt="A pixel character runs along a platform with variously colored coins scattered around.">
+                    <div class="projects-info">
+                        <h4>Fancy A Run</h4>
+                        <p>An endless runner game playable on desktop web browsers. Developed using Unity WebGL. Hosted on itch.io.</p>
                     </div>
                 </a>
             </div>
